[gd_scene load_steps=6 format=3 uid="uid://b1ep2840cg16r"]

[ext_resource type="Texture2D" uid="uid://bdnkps6ojms40" path="res://Sprite-0004.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://dijcyb321tlcd" path="res://player.gd" id="1_onrkg"]
[ext_resource type="AudioStream" uid="uid://csyffabqljxm1" path="res://sounds2/death.wav" id="3_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh265"]
size = Vector2(146, 146)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4flbx"]
size = Vector2(7.3999996, 7.2999997)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3.67, 3.67)
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_sh265")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(9.536743e-07, -1.0000005)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_4flbx")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false

[node name="TrailTimer" type="Timer" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qhqgy")
volume_db = -5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
